Make footer and nav and main components

--- a/src/App.less
+++ b/src/App.less
@@ -1,4 +1,11 @@
 body {
     background-color: #333;
     font-family: serif;
+    color: white;
+}
+
+#root,
+body {
+    padding: 0;
+    margin: 0;
 }
