--- a/src/Footer/Footer.less
+++ b/src/Footer/Footer.less
@@ -7,12 +7,14 @@ footer {
     bottom: 0;
     background-color: #111c;
     width: 100vw;
-    div {
+    #infoBox {
         display: flex;
         flex-direction: row;
     }
     #icons {
         margin-left: auto;
+        display: grid;
+        grid-auto-flow: column;
         div {
             padding-inline: 5px;
             height: 25px;
@@ -30,6 +32,92 @@ footer {
             img {
                 width: 15px;
                 height: 25px;
+            }
+        }
+    }
+    @media screen and (max-width: 400px) {
+        font-size: 0.8em;
+    }
+    @media screen and (max-width: 300px) {
+        font-size: 0.6em;
+    }
+    @media screen and (max-width: 200px) {
+        font-size: 0.4em;
+    }
+    @media screen and (max-width: 600px) {
+        #infoBox {
+            display: flex;
+            flex-direction: column;
+            #icons {
+                margin: 0;
+                grid-auto-flow: column;
+                grid-template-columns: unset;
+                justify-content: right;
+            }
+        }
+    }
+
+    .langSelectFlag {
+        width: 30px;
+    }
+
+    .langButton {
+        border: none;
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+    }
+    ul {
+        margin: 0;
+        padding: 0;
+        li {
+            background-color: white;
+            text-align: center;
+            list-style: none;
+            user-select: none;
+            color: black;
+        }
+    }
+    #languageSelectionBox {
+        button {
+            box-sizing: border-box;
+        }
+        #currentLang {
+            display: block;
+            height: min-content;
+        }
+        .langButton {
+            padding: 0;
+        }
+        #langSelect[data-shown="false"] {
+            display: none;
+        }
+        #langSelect[data-shown="true"] {
+            display: block;
+        }
+        li {
+            background-color: transparent;
+            border: none;
+            width: min-content;
+        }
+        > div {
+            display: grid;
+            grid-auto-flow: column;
+            width: min-content;
+            gap: 15px;
+            min-height: 30px;
+            justify-content: center;
+            align-items: center;
+            > ul {
+                display: grid;
+                grid-auto-flow: column;
+                > li {
+                    button {
+                        margin: 0;
+                        padding: 0;
+                    }
+                }
             }
         }
     }
