--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -1,16 +1,62 @@
 nav {
   padding-inline: 10px;
 }
+@media screen and (max-width: 400px) {
+  nav {
+    padding: 0;
+    margin-top: 0;
+  }
+}
 nav ul {
-  margin-inline: auto;
+  margin-top: 0;
   display: grid;
-  grid-auto-flow: column;
+  margin-inline: auto;
   padding: 0;
   justify-items: center;
+  grid-auto-flow: column;
 }
 nav ul li {
+  background-color: white;
   text-align: center;
   display: block;
   list-style: none;
   width: 100px;
+  border: 1px solid black;
+  margin: 5px;
+  user-select: none;
+  color: black;
+}
+nav ul li:hover,
+nav ul li:hover {
+  cursor: pointer;
+  background-color: yellow;
+}
+nav ul li button {
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+}
+nav ul li[data-selected="selected"] {
+  background-color: red;
+  cursor: default;
+}
+@media screen and (max-width: 400px) {
+  nav ul {
+    grid-auto-flow: row;
+    width: 100%;
+  }
+  nav ul li {
+    margin: 0;
+    box-sizing: content-box;
+    border: none;
+    border-bottom: 1px solid black;
+    width: 100%;
+  }
+}
+nav .pageButton {
+  border: none;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
