--- a/src/Nav/Nav.less
+++ b/src/Nav/Nav.less
@@ -1,16 +1,59 @@
 nav {
+    @media screen and (max-width: 400px) {
+        padding: 0;
+        margin-top: 0;
+    }
     padding-inline: 10px;
     ul {
-        margin-inline: auto;
+        margin-top: 0;
         display: grid;
-        grid-auto-flow: column;
+        margin-inline: auto;
         padding: 0;
         justify-items: center;
+        grid-auto-flow: column;
         li {
+            background-color: white;
             text-align: center;
             display: block;
             list-style: none;
             width: 100px;
+            border: 1px solid black;
+            margin: 5px;
+            user-select: none;
+            color: black;
+            &:hover,
+            &:hover {
+                cursor: pointer;
+                background-color: yellow;
+            }
+            button {
+                padding: 5px;
+                width: 100%;
+                height: 100%;
+            }
         }
+        li[data-selected="selected"] {
+            background-color: red;
+            cursor: default;
+        }
+
+        @media screen and (max-width: 400px) {
+            grid-auto-flow: row;
+            width: 100%;
+            li {
+                margin: 0;
+                box-sizing: content-box;
+                border: none;
+                border-bottom: 1px solid black;
+                width: 100%;
+            }
+        }
+    }
+    .pageButton {
+        border: none;
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
     }
 }
