--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,12 +1,10 @@
 footer {
   color: lightblue;
   padding: 1px 10px;
-  position: absolute;
   box-sizing: border-box;
-  z-index: 90;
-  bottom: 0;
   background-color: #111c;
   width: 100vw;
+  font-size: 0.4em;
 }
 footer #infoBox {
   display: flex;
@@ -36,22 +34,20 @@ footer #icons div img {
   width: 15px;
   height: 25px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (min-width: 400px) {
   footer {
     font-size: 0.8em;
   }
 }
-@media screen and (max-width: 300px) {
+@media screen and (min-width: 300px) {
   footer {
     font-size: 0.6em;
   }
 }
-@media screen and (max-width: 200px) {
+@media screen and (min-width: 600px) {
   footer {
-    font-size: 0.4em;
+    font-size: 1em;
   }
-}
-@media screen and (max-width: 600px) {
   footer #infoBox {
     display: flex;
     flex-direction: column;
@@ -121,4 +117,14 @@ footer #languageSelectionBox > div > ul {
 footer #languageSelectionBox > div > ul > li button {
   margin: 0;
   padding: 0;
+}
+@media only screen and (min-width: 768px) {
+  footer {
+    grid-column: 1 / 3;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  footer {
+    grid-column: unset;
+  }
 }
