--- a/src/Footer/Footer.less
+++ b/src/Footer/Footer.less
@@ -1,10 +1,7 @@
 footer {
     color: lightblue;
     padding: 1px 10px;
-    position: absolute;
     box-sizing: border-box;
-    z-index: 90;
-    bottom: 0;
     background-color: #111c;
     width: 100vw;
     #infoBox {
@@ -35,16 +32,16 @@ footer {
             }
         }
     }
-    @media screen and (max-width: 400px) {
+    font-size: 0.4em;
+
+    @media screen and (min-width: 400px) {
         font-size: 0.8em;
     }
-    @media screen and (max-width: 300px) {
+    @media screen and (min-width: 300px) {
         font-size: 0.6em;
     }
-    @media screen and (max-width: 200px) {
-        font-size: 0.4em;
-    }
-    @media screen and (max-width: 600px) {
+    @media screen and (min-width: 600px) {
+        font-size: 1em;
         #infoBox {
             display: flex;
             flex-direction: column;
@@ -120,5 +117,11 @@ footer {
                 }
             }
         }
+    }
+    @media only screen and (min-width: 768px) {
+        grid-column: 1 / 3;
+    }
+    @media only screen and (min-width: 1000px) {
+        grid-column: unset;
     }
 }
