--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -1,11 +1,6 @@
 nav {
-  padding-inline: 10px;
-}
-@media screen and (max-width: 400px) {
-  nav {
-    padding: 0;
-    margin-top: 0;
-  }
+  padding: 0;
+  margin-top: 0;
 }
 nav ul {
   margin-top: 0;
@@ -13,18 +8,21 @@ nav ul {
   margin-inline: auto;
   padding: 0;
   justify-items: center;
-  grid-auto-flow: column;
+  grid-auto-flow: row;
+  width: 100%;
 }
 nav ul li {
   background-color: white;
   text-align: center;
   display: block;
   list-style: none;
-  width: 100px;
-  border: 1px solid black;
-  margin: 5px;
   user-select: none;
   color: black;
+  margin: 0;
+  box-sizing: content-box;
+  border: none;
+  border-bottom: 1px solid black;
+  width: 100%;
 }
 nav ul li:hover,
 nav ul li:hover {
@@ -40,23 +38,26 @@ nav ul li[data-selected="selected"] {
   background-color: red;
   cursor: default;
 }
-@media screen and (max-width: 400px) {
-  nav ul {
-    grid-auto-flow: row;
-    width: 100%;
-  }
-  nav ul li {
-    margin: 0;
-    box-sizing: content-box;
-    border: none;
-    border-bottom: 1px solid black;
-    width: 100%;
-  }
-}
 nav .pageButton {
   border: none;
   background-color: transparent;
   width: 100%;
   height: 100%;
   cursor: pointer;
+}
+@media screen and (min-width: 1000px) {
+  nav {
+    padding-inline: 10px;
+  }
+  nav ul {
+    gap: 10%;
+    grid-auto-flow: column;
+    width: auto;
+    max-width: 750px;
+  }
+  nav ul li {
+    max-width: 200px;
+    border: 1px solid black;
+    margin: 15px;
+  }
 }
