--- a/src/Nav/Nav.less
+++ b/src/Nav/Nav.less
@@ -1,26 +1,26 @@
 nav {
-    @media screen and (max-width: 400px) {
-        padding: 0;
-        margin-top: 0;
-    }
-    padding-inline: 10px;
+    padding: 0;
+    margin-top: 0;
     ul {
         margin-top: 0;
         display: grid;
         margin-inline: auto;
         padding: 0;
         justify-items: center;
-        grid-auto-flow: column;
+        grid-auto-flow: row;
+        width: 100%;
         li {
             background-color: white;
             text-align: center;
             display: block;
             list-style: none;
-            width: 100px;
-            border: 1px solid black;
-            margin: 5px;
             user-select: none;
             color: black;
+            margin: 0;
+            box-sizing: content-box;
+            border: none;
+            border-bottom: 1px solid black;
+            width: 100%;
             &:hover,
             &:hover {
                 cursor: pointer;
@@ -36,18 +36,6 @@ nav {
             background-color: red;
             cursor: default;
         }
-
-        @media screen and (max-width: 400px) {
-            grid-auto-flow: row;
-            width: 100%;
-            li {
-                margin: 0;
-                box-sizing: content-box;
-                border: none;
-                border-bottom: 1px solid black;
-                width: 100%;
-            }
-        }
     }
     .pageButton {
         border: none;
@@ -55,5 +43,19 @@ nav {
         width: 100%;
         height: 100%;
         cursor: pointer;
+    }
+    @media screen and (min-width: 1000px) {
+        padding-inline: 10px;
+        ul {
+            gap: 10%;
+            grid-auto-flow: column;
+            width: auto;
+            max-width: 750px;
+            li {
+                max-width: 200px;
+                border: 1px solid black;
+                margin: 15px;
+            }
+        }
     }
 }
