Vars.less and sticky footer

--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,60 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin: 0;
+  margin-bottom: 60px;
+  /* bottom = footer height */
+  padding: 25px;
+}
+@media screen and (min-width: 200px) {
+  body {
+    margin-bottom: 70px;
+  }
+}
+@media screen and (min-width: 400px) {
+  body {
+    margin-bottom: 80px;
+  }
+}
+@media screen and (min-width: 600px) {
+  body {
+    margin-bottom: 40px;
+  }
+}
+footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+}
 body {
   background-color: #333;
   font-family: serif;
   color: white;
 }
-:root {
-  --telwidth: 600px;
-}
 #root,
 body {
   padding: 0;
-  margin: 0;
 }
 #root {
   display: grid;
   grid-template-columns: 1fr;
 }
-@media only screen and (min-width: var(--tabwidth)) {
+@media only screen and (min-width: 600px) {
   #root {
     grid-template-columns: 1fr 10fr;
-  }
-  #root nav {
-    height: 250px;
   }
   #root nav ul {
     gap: 25px;
   }
   #root main {
     padding: 25px;
+    padding-top: 0;
   }
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 768px) {
   #root {
     grid-template-columns: 1fr;
   }
