--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -4,11 +4,12 @@ footer {
   box-sizing: border-box;
   background-color: #111c;
   width: 100vw;
-  font-size: 0.4em;
+  height: 55px;
+  font-size: 0.5em;
 }
 footer #infoBox {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 footer #icons {
   margin-left: auto;
@@ -34,26 +35,28 @@ footer #icons div img {
   width: 15px;
   height: 25px;
 }
+@media screen and (min-width: 200px) {
+  footer {
+    font-size: 0.6em;
+    height: 60px;
+  }
+}
 @media screen and (min-width: 400px) {
   footer {
     font-size: 0.8em;
-  }
-}
-@media screen and (min-width: 300px) {
-  footer {
-    font-size: 0.6em;
+    height: 70px;
   }
 }
 @media screen and (min-width: 600px) {
   footer {
+    height: 60px;
     font-size: 1em;
   }
   footer #infoBox {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
   }
   footer #infoBox #icons {
-    margin: 0;
     grid-auto-flow: column;
     grid-template-columns: unset;
     justify-content: right;
@@ -118,12 +121,12 @@ footer #languageSelectionBox > div > ul > li button {
   margin: 0;
   padding: 0;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   footer {
     grid-column: 1 / 3;
   }
 }
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1024px) {
   footer {
     grid-column: unset;
   }
