--- a/src/Footer/Footer.less
+++ b/src/Footer/Footer.less
@@ -1,12 +1,16 @@
+@import "./../vars.less";
+
 footer {
     color: lightblue;
     padding: 1px 10px;
     box-sizing: border-box;
     background-color: #111c;
     width: 100vw;
+    height: 55px;
+
     #infoBox {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
     }
     #icons {
         margin-left: auto;
@@ -32,21 +36,22 @@ footer {
             }
         }
     }
-    font-size: 0.4em;
-
-    @media screen and (min-width: 400px) {
-        font-size: 0.8em;
-    }
-    @media screen and (min-width: 300px) {
+    font-size: 0.5em;
+    @media screen and (min-width: @small-font) {
         font-size: 0.6em;
+        height: 60px;
     }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: @mid-font) {
+        font-size: 0.8em;
+        height: 70px;
+    }
+    @media screen and (min-width: @phone-width) {
+        height: 60px;
         font-size: 1em;
         #infoBox {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             #icons {
-                margin: 0;
                 grid-auto-flow: column;
                 grid-template-columns: unset;
                 justify-content: right;
@@ -118,10 +123,10 @@ footer {
             }
         }
     }
-    @media only screen and (min-width: 768px) {
+    @media only screen and (min-width: @phone-width) {
         grid-column: 1 / 3;
     }
-    @media only screen and (min-width: 1000px) {
+    @media only screen and (min-width: @desktop-width) {
         grid-column: unset;
     }
 }
