--- a/src/Nav/Nav.less
+++ b/src/Nav/Nav.less
@@ -1,3 +1,5 @@
+@import "./../vars.less";
+
 nav {
     padding: 0;
     margin-top: 0;
@@ -44,7 +46,7 @@ nav {
         height: 100%;
         cursor: pointer;
     }
-    @media screen and (min-width: 1000px) {
+    @media screen and (min-width: @desktop-width) {
         padding-inline: 10px;
         ul {
             gap: 10%;
