--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,4 +1,8 @@
 footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
   color: lightblue;
   padding: 1px 10px;
   box-sizing: border-box;
@@ -34,33 +38,6 @@ footer #icons div a:hover {
 footer #icons div img {
   width: 15px;
   height: 25px;
-}
-@media screen and (min-width: 200px) {
-  footer {
-    font-size: 0.6em;
-    height: 60px;
-  }
-}
-@media screen and (min-width: 400px) {
-  footer {
-    font-size: 0.8em;
-    height: 70px;
-  }
-}
-@media screen and (min-width: 600px) {
-  footer {
-    height: 60px;
-    font-size: 1em;
-  }
-  footer #infoBox {
-    display: flex;
-    flex-direction: row;
-  }
-  footer #infoBox #icons {
-    grid-auto-flow: column;
-    grid-template-columns: unset;
-    justify-content: right;
-  }
 }
 footer .langSelectFlag {
   width: 30px;
@@ -121,9 +98,32 @@ footer #languageSelectionBox > div > ul > li button {
   margin: 0;
   padding: 0;
 }
-@media only screen and (min-width: 600px) {
+@media screen and (min-width: 200px) {
   footer {
+    font-size: 0.6em;
+    height: 60px;
+  }
+}
+@media screen and (min-width: 400px) {
+  footer {
+    font-size: 0.8em;
+    height: 70px;
+  }
+}
+@media screen and (min-width: 600px) {
+  footer {
+    height: 60px;
+    font-size: 1em;
     grid-column: 1 / 3;
+  }
+  footer #infoBox {
+    display: flex;
+    flex-direction: row;
+  }
+  footer #infoBox #icons {
+    grid-auto-flow: column;
+    grid-template-columns: unset;
+    justify-content: right;
   }
 }
 @media only screen and (min-width: 1024px) {
