--- a/src/Footer/Footer.less
+++ b/src/Footer/Footer.less
@@ -1,12 +1,17 @@
 @import "./../vars.less";
 
 footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
     color: lightblue;
     padding: 1px 10px;
     box-sizing: border-box;
     background-color: #111c;
     width: 100vw;
     height: 55px;
+    font-size: 0.5em;
 
     #infoBox {
         display: flex;
@@ -33,28 +38,6 @@ footer {
             img {
                 width: 15px;
                 height: 25px;
-            }
-        }
-    }
-    font-size: 0.5em;
-    @media screen and (min-width: @small-font) {
-        font-size: 0.6em;
-        height: 60px;
-    }
-    @media screen and (min-width: @mid-font) {
-        font-size: 0.8em;
-        height: 70px;
-    }
-    @media screen and (min-width: @phone-width) {
-        height: 60px;
-        font-size: 1em;
-        #infoBox {
-            display: flex;
-            flex-direction: row;
-            #icons {
-                grid-auto-flow: column;
-                grid-template-columns: unset;
-                justify-content: right;
             }
         }
     }
@@ -123,7 +106,27 @@ footer {
             }
         }
     }
-    @media only screen and (min-width: @phone-width) {
+
+    @media screen and (min-width: @small-font) {
+        font-size: 0.6em;
+        height: 60px;
+    }
+    @media screen and (min-width: @mid-font) {
+        font-size: 0.8em;
+        height: 70px;
+    }
+    @media screen and (min-width: @phone-width) {
+        height: 60px;
+        font-size: 1em;
+        #infoBox {
+            display: flex;
+            flex-direction: row;
+            #icons {
+                grid-auto-flow: column;
+                grid-template-columns: unset;
+                justify-content: right;
+            }
+        }
         grid-column: 1 / 3;
     }
     @media only screen and (min-width: @desktop-width) {
