--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -38,17 +38,7 @@ nav ul li[data-selected="selected"] {
   background-color: red;
   cursor: default;
 }
-nav .pageButton {
-  border: none;
-  background-color: transparent;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-}
 @media screen and (min-width: 1024px) {
-  nav {
-    padding-inline: 10px;
-  }
   nav ul {
     gap: 10%;
     grid-auto-flow: column;
@@ -59,5 +49,17 @@ nav .pageButton {
     max-width: 200px;
     border: 1px solid black;
     margin: 15px;
+  }
+}
+nav .pageButton {
+  border: none;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+@media screen and (min-width: 1024px) {
+  nav {
+    padding-inline: 10px;
   }
 }
