--- a/src/App.less
+++ b/src/App.less
@@ -1,10 +1,14 @@
 @import "./vars.less";
-
+* {
+    box-sizing: border-box;
+}
 html {
     position: relative;
     min-height: 100%;
 }
-
+main {
+    padding: 25px;
+}
 body {
     margin: 0;
     margin-bottom: 60px;
