--- a/src/vars.less
+++ b/src/vars.less
@@ -1,5 +1,17 @@
+@footer-height: 55px;
+@footer-height2: 60px;
+@footer-height3: 70px;
+@footer-height4: 55px;
+
 @desktop-width: 1024px;
 @tablet-width: 768px;
-@phone-width: 600px;
+@phone-width: 599px;
 @small-font: 200px;
 @mid-font: 400px;
+
+@darker-drop: #04080f;
+@dark-drop: #848fa5;
+@dark-tint: #507dbc;
+@light-drop: #bbd1ea;
+@orange-tint: #ffa585;
+@green-tint: #b9ffb7;
